# B2B_Marketplace_v2

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0a356bdbaafe_car_id_set_unique.py  0c93b4cc073c_nullable_false.py  2512633a92d5_new_table.py  8720f20788fc_ini_db2.py  888577567f63_ini_db.py  8ee4aa9b3fad_add_document.py  9e36322ebbf3_update_relationship.py  b4a7e0fb7129_.py  e570dc86843c_add_new_model.py
src/: main.py
src/admin/: auth.py  setup.py  validators.py
src/admin/views/: agreement_admin.py  balance_event_admin.py  base_admin.py  car_admin.py  company_admin.py  company_user_admin.py  (+13 more)
src/clients/: iot_simulator.py  minio_client.py
src/core/: security.py  settings.py
src/db/: database.py  session.py
src/dependencies/: auth.py
src/models/: __init__.py  agreement_model.py  balance_event_model.py  car_model.py  company_model.py  company_users_model.py  document_model.py  driver_license_model.py  enums.py  geofence_event_model.py  geofence_model.py  iot_device_model.py  mixin.py  payment_model.py  refresh_token_model.py  rental_document_model.py  rental_model.py  rental_request_model.py  telemetry_model.py  user_model.py  violation_model.py
src/scripts/: seed_admin.py
src/services/: auth_service.py  car_service.py  company_service.py  contract_service.py  document_service.py  driver_service.py  finance_service.py  geofence_service.py  iot_device_service.py  lessor_service.py  profile_service.py  rental_request_service.py  rental_service.py  renter_service.py  telemetry_service.py
(+27 files in other folders)
