[project]
name = "b2b-marketplace-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = "^3.14"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pydantic[email] (>=2.13.2,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "sqladmin (>=0.23.0,<0.24.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "bcrypt (==4.0.1)",
    "passlib[bcrypt] (>=1.7.4)",
    "uvicorn (>=0.45.0,<0.46.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "humanize (>=4.15.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
